# soliplex_sql

./: .gitignore  ANALYSIS_SQLTOOLS.md  CONTRIBUTING.md  FEEDBACK_SQLTOOLS.md  PLAN_REFACTOR.md  PLAN_SQLTOOLS.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md
example/: EXAMPLE.md  create_sample_db.py  installation.yaml  sample_data.db
example/rooms/sales-db/: room_config.yaml
example/rooms/sql-admin/: room_config.yaml
example/rooms/sql-assistant/: room_config.yaml
src/soliplex_sql/: __init__.py  adapter.py  config.py  exceptions.py  tools.py
tests/: __init__.py
tests/functional/: __init__.py  conftest.py  test_caching.py  test_real_database.py  test_tool_wrappers.py  test_write_operations.py
tests/integration/: __init__.py  test_functional.py  test_smoke.py
tests/unit/: __init__.py  conftest.py  test_adapter.py  test_config.py  test_exceptions.py  test_tools.py
